--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!------------------- Шапка сторінки --------->
+    <!---------------------------------------- header --------->
     <header class="heder">
       <!-- menu -->
-      <div class="conteiner">
-        <nav class="nav">
+      <div class="conteiner header-conteiner">
+        <nav class="heder-nav">
           <a href="./index.html" lang="en" class="color-logo logo link"
             >Web<span class="heder-logo logo">Studio</span></a
           >
           <ul class="heder-list list">
             <li class="heder-item">
-              <a href="" class="heder-link-studia link">Студія</a>
+              <a href="" class="heder-link heder-studia link">Студія</a>
             </li>
             <li class="heder-item">
               <a href="./portfolio.html" class="heder-link link">Портфоліо</a>
@@ -43,28 +43,24 @@
         </nav>
         <ul class="heder-list list">
           <li>
-            <a href="mailto:info@devstudio.com" class="heder-email link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="heder-email link">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="heder-tel link"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="heder-tel link">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
     </header>
     <!-- Унікальний контент сторінки -->
     <main>
-      <!--------------- hero ------------------->
+      <!------------------------------------------------- hero ------------------->
       <section class="section-hero">
         <div class="conteiner">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero-btn btn">Замовити послугу</button>
         </div>
       </section>
-      <!------------- benefits ----------------->
+      <!------------------------------------------------ benefits ----------------->
       <section class="section-benefits section">
         <!---сховати заголовок--->
         <div class="conteiner">
@@ -73,15 +69,13 @@
             <li class="benefits-item">
               <h3 class="benefits-title">Увага до деталей</h3>
               <p class="benefits-after-title">
-                Ідейні міркування, і навіть початок повсякденної роботи з
-                формування позиції.
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="benefits-item">
               <h3 class="benefits-title">Пунктуальність</h3>
               <p class="benefits-after-title">
-                Завдання організації, особливо рамки і місце навчання кадрів
-                тягне у себе.
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="benefits-item">
@@ -93,25 +87,19 @@
             <li class="benefits-item">
               <h3 class="benefits-title">Сучасні технології</h3>
               <p class="benefits-after-title">
-                Значимість цих проблем настільки очевидна, що реалізація
-                планових завдань.
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
           </ul>
         </div>
       </section>
-      <!------------- aktiviti ---------------->
+      <!------------------------------------------------- aktiviti ---------------->
       <section class="section-aktiviti section">
         <div class="conteiner">
           <h2 class="aktiviti-title">Чим ми займаємося</h2>
           <ul class="aktiviti-list list">
             <li>
-              <img
-                src="./images/img-1.jpg"
-                alt="стратегія"
-                width="370"
-                height="294"
-              />
+              <img src="./images/img-1.jpg" alt="стратегія" width="370" height="294" class="img" />
             </li>
             <li>
               <img
@@ -119,15 +107,11 @@
                 alt="програмування"
                 width="370"
                 height="294"
+                class="img"
               />
             </li>
             <li>
-              <img
-                src="./images/img-3.jpg"
-                alt="дизайн"
-                width="370"
-                height="294"
-              />
+              <img src="./images/img-3.jpg" alt="дизайн" width="370" height="294" class="img" />
             </li>
           </ul>
         </div>
@@ -143,9 +127,12 @@
                 alt="product designer"
                 width="270"
                 height="260"
+                class="img"
               />
-              <h3 class="team-people">Ігор Дем'яненко</h3>
-              <p class="team-specialist">Product Designer</p>
+              <div class="team-name">
+                <h3 class="team-people">Ігор Дем'яненко</h3>
+                <p class="team-specialist">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -153,9 +140,12 @@
                 alt="frontend developer"
                 width="270"
                 height="260"
+                class="img"
               />
-              <h3 class="team-people">Ольга Рєпіна</h3>
-              <p class="team-specialist">Frontend Developer</p>
+              <div class="team-name">
+                <h3 class="team-people">Ольга Рєпіна</h3>
+                <p class="team-specialist">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -163,9 +153,12 @@
                 alt="marketing"
                 width="270"
                 height="260"
+                class="img"
               />
-              <h3 class="team-people">Микола Тарасов</h3>
-              <p class="team-specialist">Marketing</p>
+              <div class="team-name">
+                <h3 class="team-people">Микола Тарасов</h3>
+                <p class="team-specialist">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -173,9 +166,12 @@
                 alt="ui designer"
                 width="270"
                 height="260"
+                class="img"
               />
-              <h3 class="team-people">Михайло Єрмаков</h3>
-              <p class="team-specialist">UI Designer</p>
+              <div class="team-name">
+                <h3 class="team-people">Михайло Єрмаков</h3>
+                <p class="team-specialist">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -183,7 +179,7 @@
     </main>
     <!-- Підвал сторінки -->
     <footer class="footer">
-      <!-- contacts -->
+      <!---------------------------------------------footer -->
       <div class="conteiner">
         <a href="./index.html" lang="en" class="color-logo logo link"
           >Web<span class="footer-logo logo">Studio</span></a
@@ -200,14 +196,10 @@
               >
             </li>
             <li class="footer-item">
-              <a href="malto:info@devstudio.com" class="footer-email link"
-                >info@devstudio.com</a
-              >
+              <a href="malto:info@devstudio.com" class="footer-email link">info@devstudio.com</a>
             </li>
             <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-tel link"
-                >+38 096 111 11 11</a
-              >
+              <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
