--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
               <a href="./index.html" class="heder-link link">Студія</a>
             </li>
             <li class="heder-item">
-              <a href="" class="heder-link-portfolio link">Портфоліо</a>
+              <a href="" class="heder-link heder-portfolio link">Портфоліо</a>
             </li>
             <li class="heder-item">
               <a href="" class="heder-link link">Контакти</a>
@@ -43,14 +43,10 @@
         </nav>
         <ul class="heder-list list">
           <li>
-            <a href="mailto:info@devstudio.com" class="heder-email link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="heder-email link">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="heder-tel link"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="heder-tel link">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -87,6 +83,7 @@
                   alt="laptop"
                   width="370"
                   height="294"
+                  class="img"
                 />
                 <h3 class="portfolio-title">Технокряк</h3>
                 <p class="portfolio-after-title">Веб-сайт</p>
@@ -99,10 +96,9 @@
                   alt="sportsman"
                   width="370"
                   height="294"
+                  class="img"
                 />
-                <h3 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h3>
+                <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                 <p class="portfolio-after-title">Дизайн</p>
               </a>
             </li>
@@ -113,6 +109,7 @@
                   alt="fish"
                   width="370"
                   height="294"
+                  class="img"
                 />
                 <h3 class="portfolio-title">Ресторан Seafood</h3>
                 <p class="portfolio-after-title">Додаток</p></a
@@ -125,6 +122,7 @@
                   alt="headphone"
                   width="370"
                   height="294"
+                  class="img"
                 />
                 <h3 class="portfolio-title">Проєкт Prime</h3>
                 <p class="portfolio-after-title">Маркетинг</p></a
@@ -137,6 +135,7 @@
                   alt="boxes"
                   width="370"
                   height="294"
+                  class="img"
                 />
                 <h3 class="portfolio-title">Проєкт Boxes</h3>
                 <p class="portfolio-after-title">Додаток</p></a
@@ -149,6 +148,7 @@
                   alt="monitor"
                   width="370"
                   height="294"
+                  class="img"
                 />
                 <h3 class="portfolio-title">Inspiration has no Borders</h3>
                 <p class="portfolio-after-title">Веб-сайт</p></a
@@ -161,6 +161,7 @@
                   alt="magazine"
                   width="370"
                   height="294"
+                  class="img"
                 />
                 <h3 class="portfolio-title">Видання Limited Edition</h3>
                 <p class="portfolio-after-title">Дизайн</p></a
@@ -173,6 +174,7 @@
                   alt="label"
                   width="370"
                   height="294"
+                  class="img"
                 />
                 <h3 class="portfolio-title">Проект LAB</h3>
                 <p class="portfolio-after-title">Маркетинг</p></a
@@ -185,6 +187,7 @@
                   alt="working laptop"
                   width="370"
                   height="294"
+                  class="img"
                 />
                 <h3 class="portfolio-title">Growing Business</h3>
                 <p class="portfolio-after-title">Додаток</p></a
@@ -213,14 +216,10 @@
               >
             </li>
             <li class="footer-item">
-              <a href="malto:info@devstudio.com" class="footer-email link"
-                >info@devstudio.com</a
-              >
+              <a href="malto:info@devstudio.com" class="footer-email link">info@devstudio.com</a>
             </li>
             <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-tel link"
-                >+38 096 111 11 11</a
-              >
+              <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
