--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!---------------------------------------- header --------->
+    <!----------------------------------------------- header --------->
     <header class="heder">
       <!-- menu -->
       <div class="conteiner header-conteiner">
@@ -53,14 +53,14 @@
     </header>
     <!-- Унікальний контент сторінки -->
     <main>
-      <!------------------------------------------------- hero ------------------->
+      <!----------------------------------------------- hero ------------------->
       <section class="section-hero">
         <div class="conteiner">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero-btn btn">Замовити послугу</button>
         </div>
       </section>
-      <!------------------------------------------------ benefits ----------------->
+      <!-------------------------------------------- benefits ----------------->
       <section class="section-benefits section">
         <!---сховати заголовок--->
         <div class="conteiner">
@@ -93,7 +93,7 @@
           </ul>
         </div>
       </section>
-      <!------------------------------------------------- aktiviti ---------------->
+      <!---------------------------------------------- aktiviti ---------------->
       <section class="section-aktiviti section">
         <div class="conteiner">
           <h2 class="aktiviti-title">Чим ми займаємося</h2>
@@ -116,7 +116,7 @@
           </ul>
         </div>
       </section>
-      <!---------------- team ---------------->
+      <!----------------------------------------------- team ---------------->
       <section class="section-team section">
         <div class="conteiner">
           <h2 class="team-title">Наша команда</h2>
@@ -177,7 +177,7 @@
         </div>
       </section>
     </main>
-    <!-- Підвал сторінки -->
+    <!--------------------------------------- Підвал сторінки -->
     <footer class="footer">
       <!---------------------------------------------footer -->
       <div class="conteiner">
