--- a/portfolio.html
+++ b/portfolio.html
@@ -24,17 +24,17 @@
     <!-- Шапка сторінки -->
     <header class="heder">
       <!-- menu -->
-      <div class="conteiner">
+      <div class="conteiner header-conteiner">
         <nav class="heder-nav">
           <a href="./index.html" lang="en" class="color-logo logo link"
             >Web<span class="heder-logo logo">Studio</span></a
           >
           <ul class="heder-list list">
             <li class="heder-item">
-              <a href="./index.html" class="heder-link link">Студія</a>
+              <a href="" class="heder-link heder-studia link">Студія</a>
             </li>
             <li class="heder-item">
-              <a href="" class="heder-link heder-portfolio link">Портфоліо</a>
+              <a href="./portfolio.html" class="heder-link link">Портфоліо</a>
             </li>
             <li class="heder-item">
               <a href="" class="heder-link link">Контакти</a>
@@ -77,7 +77,7 @@
           <h2 class="visually-hidden">Портфоліо</h2>
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a href=""
+              <a href="" class="link"
                 ><img
                   src="./images/img-portfolio-1-min.jpg"
                   alt="laptop"
@@ -85,12 +85,14 @@
                   height="294"
                   class="img"
                 />
-                <h3 class="portfolio-title">Технокряк</h3>
-                <p class="portfolio-after-title">Веб-сайт</p>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Технокряк</h3>
+                  <p class="portfolio-after-title">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href=""
+              <a href="" class="link"
                 ><img
                   src="./images/img-portfolio-2-min.jpg"
                   alt="sportsman"
@@ -98,12 +100,14 @@
                   height="294"
                   class="img"
                 />
-                <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-                <p class="portfolio-after-title">Дизайн</p>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+                  <p class="portfolio-after-title">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/img-portfolio-3-min.jpg"
                   alt="fish"
@@ -111,12 +115,14 @@
                   height="294"
                   class="img"
                 />
-                <h3 class="portfolio-title">Ресторан Seafood</h3>
-                <p class="portfolio-after-title">Додаток</p></a
-              >
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Ресторан Seafood</h3>
+                  <p class="portfolio-after-title">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/img-portfolio-4-min.jpg"
                   alt="headphone"
@@ -124,12 +130,14 @@
                   height="294"
                   class="img"
                 />
-                <h3 class="portfolio-title">Проєкт Prime</h3>
-                <p class="portfolio-after-title">Маркетинг</p></a
-              >
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Проєкт Prime</h3>
+                  <p class="portfolio-after-title">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <a href=""
+              <a href="" class="link"
                 ><img
                   src="./images/img-portfolio-5-min.jpg"
                   alt="boxes"
@@ -137,12 +145,14 @@
                   height="294"
                   class="img"
                 />
-                <h3 class="portfolio-title">Проєкт Boxes</h3>
-                <p class="portfolio-after-title">Додаток</p></a
-              >
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Проєкт Boxes</h3>
+                  <p class="portfolio-after-title">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <a href=""
+              <a href="" class="link"
                 ><img
                   src="./images/img-portfolio-6-min.jpg"
                   alt="monitor"
@@ -150,12 +160,14 @@
                   height="294"
                   class="img"
                 />
-                <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                <p class="portfolio-after-title">Веб-сайт</p></a
-              >
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                  <p class="portfolio-after-title">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <a href=""
+              <a href="" class="link"
                 ><img
                   src="./images/img-portfolio-7-min.jpg"
                   alt="magazine"
@@ -163,12 +175,14 @@
                   height="294"
                   class="img"
                 />
-                <h3 class="portfolio-title">Видання Limited Edition</h3>
-                <p class="portfolio-after-title">Дизайн</p></a
-              >
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Видання Limited Edition</h3>
+                  <p class="portfolio-after-title">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <a href=""
+              <a href="" class="link"
                 ><img
                   src="./images/img-portfolio-8-min.jpg"
                   alt="label"
@@ -176,12 +190,14 @@
                   height="294"
                   class="img"
                 />
-                <h3 class="portfolio-title">Проект LAB</h3>
-                <p class="portfolio-after-title">Маркетинг</p></a
-              >
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Проект LAB</h3>
+                  <p class="portfolio-after-title">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <a href=""
+              <a href="" class="link"
                 ><img
                   src="./images/img-portfolio-9-min.jpg"
                   alt="working laptop"
@@ -189,9 +205,11 @@
                   height="294"
                   class="img"
                 />
-                <h3 class="portfolio-title">Growing Business</h3>
-                <p class="portfolio-after-title">Додаток</p></a
-              >
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Growing Business</h3>
+                  <p class="portfolio-after-title">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -199,7 +217,7 @@
     </main>
     <!-- Підвал сторінки -->
     <footer class="footer">
-      <!-- contacts -->
+      <!---------------------------------------------footer -->
       <div class="conteiner">
         <a href="./index.html" lang="en" class="color-logo logo link"
           >Web<span class="footer-logo logo">Studio</span></a
