--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- Шапка сторінки -->
+    <!-- Шпка сторінки -->
     <header class="heder">
       <!-- menu -->
       <div class="conteiner header-conteiner">
@@ -31,10 +31,10 @@
           >
           <ul class="heder-list list">
             <li class="heder-item">
-              <a href="" class="heder-link heder-studia link">Студія</a>
+              <a href="./index.html" class="heder-link link">Студія</a>
             </li>
             <li class="heder-item">
-              <a href="./portfolio.html" class="heder-link link">Портфоліо</a>
+              <a href="" class="heder-link heder-portfolio link">Портфоліо</a>
             </li>
             <li class="heder-item">
               <a href="" class="heder-link link">Контакти</a>
@@ -53,7 +53,7 @@
     </header>
     <!-- Унікальний контент сторінки -->
     <main>
-      <!-- portfolio -->
+      <!-------------------------------------- portfolio batom------- -->
       <section class="batton-portfolio section">
         <div class="conteiner">
           <h2 class="visually-hidden">Види портфоліо</h2>
@@ -74,6 +74,7 @@
               <button type="button" class="portfolio-btn">Маркетинг</button>
             </li>
           </ul>
+          <!----------------------------portfolio img------------------------------->
           <h2 class="visually-hidden">Портфоліо</h2>
           <ul class="portfolio-list list">
             <li class="portfolio-item">
